--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "godotTools.editorPath.godot4": "/Applications/Godot_mono.app"
+    "godotTools.editorPath.godot4": "/Applications/Godot 4.3 (.NET).app"
 }
